--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "electron-better-ipc": "^2.0.1",
     "electron-online": "^1.0.0",
+    "mysql": "^2.18.1",
     "node": "^21.1.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
