--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "rimraf": "^5.0.5",
-    "whatsapp-web.js": "^1.23.0",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus",
     "xlsx": "^0.18.5"
   }
 }
