--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^27.0.4",
+    "electron-packager": "^17.1.2",
     "standard": "17.1.0"
   },
   "eslintConfig": {
